task cards design

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@
           margin: 0;
           padding: 0;
       }
+      th {
+        text-align: left !important;
+      }
     </style>
     <title>React App</title>
   </head>
